--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,18 +5,18 @@
       <div class="text-danger" *ngIf="submitted && regForm.invalid && (regForm.dirty || regForm.touched)">
         <div *ngIf="emailAddress.errors">
           <div *ngIf="emailAddress.errors.required">
-            * Email address is required.
+            {{label.email.error.required}}
           </div>
           <div *ngIf="emailAddress.errors.email">
-            * Invalid email address.
+            {{label.email.error.invalid}}
           </div>
         </div>
         <div *ngIf="password.errors">
           <div *ngIf="password.errors.required">
-            * Password is required.
+            {{label.password.error.required}}
           </div>
           <div *ngIf="password.errors.pattern">
-            * Password must be 8 character long with at least one character and one special character.
+            {{label.password.error.pattern}}
           </div>
         </div>
       </div>
@@ -31,38 +31,35 @@
           <div *ngIf="emailAddress.invalid && (emailAddress.dirty || emailAddress.touched)"
                class="text-danger">
             <div *ngIf="emailAddress.errors.required">
-              * Email address is required.
+              {{label.email.error.required}}
             </div>
             <div *ngIf="emailAddress.errors.email">
-              * Invalid email address.
+              {{label.email.error.invalid}}
             </div>
           </div>
         </div>
         <div class="form-group">
-          <label for="subscribe">Subscribe</label>
+          <label for="subscribe">{{label.email.caption}}</label>
           <select class="form-control" formControlName="subscribe" id="subscribe">
             <option *ngFor="let sub of subscriptions" [value]="sub">{{sub}}</option>
           </select>
         </div>
         <div class="form-group">
-          <label for="password">Password</label>
+          <label for="password">{{label.password.caption}}</label>
           <input type="password" formControlName="password" class="form-control" id="password" placeholder="Password" maxlength="8">
           <div *ngIf="password.invalid && (password.dirty || password.touched)"
                class="text-danger">
             <div *ngIf="password.errors.required">
-              * Password is required.
+              {{label.password.error.required}}
             </div>
-            <!--<div *ngIf="password.errors.minlength">
-              * Password must be at least 4 characters long.
-            </div>-->
             <div *ngIf="password.errors.pattern">
-              * Password must be 8 character long with at least one character and one special character.
+              {{label.password.error.pattern}}
             </div>
           </div>
         </div>
-        <div *ngIf="areYouSure">Are you sure to discard the changes?<button type="button" class="btn ml-1 mr-1" (click)="onYes()">Yes</button><button type="button" class="btn" (click)="onNo()">No</button></div>
-        <button type="submit" class="btn btn-primary mr-3" [disabled]="areYouSure">Submit</button>
-        <button type="button" (click)="onReset()" class="btn" [disabled]="areYouSure">Clear</button>
+        <div *ngIf="areYouSure">{{label.areYouSure.caption}}<button type="button" class="btn ml-1 mr-1" (click)="onYes()">{{label.yes.caption}}</button><button type="button" class="btn" (click)="onNo()">{{label.no.caption}}</button></div>
+        <button type="submit" class="btn btn-primary mr-3" [disabled]="areYouSure">{{label.submit.caption}}</button>
+        <button type="button" (click)="onReset()" class="btn" [disabled]="areYouSure">{{label.reset.caption}}</button>
       </form>
     </div>
   </div>
