--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,15 +1,16 @@
 <div class="container">
-  <button class="btn" (click)="goBack()">Go Back</button>
+  <button class="btn mt-3" (click)="goBack()">< Back</button>
+  <h3>User Detail</h3>
   <div class="row">
-    <div class="col-3">Email Address</div>
+    <div class="col-3">{{label.email.caption}}</div>
     <div class="col-3">: {{user.emailAddress}}</div>
   </div>
   <div class="row">
-    <div class="col-3">Subscription</div>
+    <div class="col-3">{{label.subscribe.caption}}</div>
     <div class="col-3">: {{user.subscribe}}</div>
   </div>
   <div class="row">
-    <div class="col-3">Password</div>
+    <div class="col-3">{{label.email.caption}}</div>
     <div class="col-3">: {{user.password}}</div>
   </div>
 </div>
