Unit test update

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -3,14 +3,14 @@
   <h3>User Detail</h3>
   <div class="row">
     <div class="col-3">{{label.email.caption}}</div>
-    <div class="col-3">: {{user.emailAddress}}</div>
+    <div class="col-3">: {{user?.emailAddress}}</div>
   </div>
   <div class="row">
     <div class="col-3">{{label.subscribe.caption}}</div>
-    <div class="col-3">: {{user.subscribe}}</div>
+    <div class="col-3">: {{user?.subscribe}}</div>
   </div>
   <div class="row">
     <div class="col-3">{{label.email.caption}}</div>
-    <div class="col-3">: {{user.password}}</div>
+    <div class="col-3">: {{user?.password}}</div>
   </div>
 </div>
